force-app/main/default/objects/Werk_Order__c/fields/Ondertapijt_besteld__c.field-meta.xml
<CustomField>
    <fullName>Ondertapijt_besteld__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ondertapijt besteld?</label>
    <type>Checkbox</type>
</CustomField>