force-app/main/default/objects/Werk_Order__c/fields/Openstaand_Bedrag__c.field-meta.xml
<CustomField>
    <fullName>Openstaand_Bedrag__c</fullName>
    <formula>Totaal_Incl_BTW_Wasserij_Items__c - Totaal_Transacties__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Openstaand Bedrag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>