force-app/main/default/objects/Werk_Order__c/fields/Ophaaladres1__c.field-meta.xml
<CustomField>
    <fullName>Ophaaladres1__c</fullName>
    <label>Ophaaladres</label>
    <type>Address</type>
</CustomField>