force-app/main/default/objects/Werk_Order__c/fields/Ophaaladres_toevoeging__c.field-meta.xml
<CustomField>
    <fullName>Ophaaladres_toevoeging__c</fullName>
    <label>Ophaaladres toevoeging</label>
    <length>100</length>
    <type>Text</type>
</CustomField>