force-app/main/default/objects/Werk_Order__c/fields/Ophaalmomenten_Link_Pdf_Butler__c.field-meta.xml
<CustomField>
    <fullName>Ophaalmomenten_Link_Pdf_Butler__c</fullName>
    <formula>&quot;https://www.cinco.nl/client/ophaalmoment-kiezen/?werkorder=&quot; &amp; Name &amp;
&quot;&amp;routemoment1=&quot; &amp; Route_Optie_1__c &amp;
&quot;&amp;routemoment2=&quot; &amp; Route_Optie_2__c &amp;
&quot;&amp;routemoment3=&quot; &amp; Route_Optie_3__c &amp;
&quot;&amp;id=&quot; &amp; Id &amp;
&quot;&amp;status=&quot; &amp; TEXT(Werk_Order_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ophaalmomenten Link - Pdf Butler</label>
    <type>Text</type>
</CustomField>