force-app/main/default/objects/Werk_Order__c/fields/Ophaaltijd__c.field-meta.xml
<CustomField>
    <fullName>Ophaaltijd__c</fullName>
    <formula>IF(
    ISPICKVAL(Werk_Order_Status__c, &quot;Ingepland&quot;),
    TEXT( HOUR( TIMEVALUE(Aanvang_Datum_en_Tijd__c )) + 1 + IF(
        AND(
            DATEVALUE(Aanvang_Datum_en_Tijd__c) &gt;= DATE(YEAR(DATEVALUE(Aanvang_Datum_en_Tijd__c)), 3, 26),
            DATEVALUE(Aanvang_Datum_en_Tijd__c) &lt; DATE(YEAR(DATEVALUE(Aanvang_Datum_en_Tijd__c)), 10, 29)
        ),
        1,
        0
    ))
    &amp; &quot;:&quot; &amp;
    LPAD(TEXT( MINUTE(TIMEVALUE( Aanvang_Datum_en_Tijd__c ))), 2, &apos;0&apos;)
    &amp; &quot; uur en &quot; &amp;
    TEXT( HOUR( TIMEVALUE(Aanvang_Tot__c )) + 1 + IF(
        AND(
            DATEVALUE(Aanvang_Tot__c) &gt;= DATE(YEAR(DATEVALUE(Aanvang_Tot__c)), 3, 26),
            DATEVALUE(Aanvang_Tot__c) &lt; DATE(YEAR(DATEVALUE(Aanvang_Tot__c)), 10, 29)
        ),
        1,
        0
    ))
    &amp; &quot;:&quot; &amp;
    LPAD(TEXT( MINUTE(TIMEVALUE( Aanvang_Tot__c ))), 2, &apos;0&apos;)
    &amp; &quot; uur&quot;,
    
    IF(
        OR(
            ISPICKVAL(Werk_Order_Status__c, &quot;Ophalen ingepland&quot;),
            ISPICKVAL(Werk_Order_Status__c, &quot;Reparatie ophalen ingepland&quot;),
            ISPICKVAL(Werk_Order_Status__c, &quot;Wordt gebracht&quot;),
            ISPICKVAL(Werk_Order_Status__c, &quot;Ophaling ingepland&quot;)
        ),
        TEXT( HOUR( TIMEVALUE(Ophalen_vanaf__c )) + 1 + IF(
            AND(
                DATEVALUE(Ophalen_vanaf__c) &gt;= DATE(YEAR(DATEVALUE(Ophalen_vanaf__c)), 3, 26),
                DATEVALUE(Ophalen_vanaf__c) &lt; DATE(YEAR(DATEVALUE(Ophalen_vanaf__c)), 10, 29)
            ),
            1,
            0
        ))
        &amp; &quot;:&quot; &amp;
        LPAD(TEXT( MINUTE(TIMEVALUE( Ophalen_vanaf__c ))), 2, &apos;0&apos;)
        &amp; &quot; uur en &quot; &amp;
        TEXT( HOUR( TIMEVALUE(Ophalen_tot__c )) + 1 + IF(
            AND(
                DATEVALUE(Ophalen_vanaf__c) &gt;= DATE(YEAR(DATEVALUE(Ophalen_vanaf__c)), 3, 26),
                DATEVALUE(Ophalen_vanaf__c) &lt; DATE(YEAR(DATEVALUE(Ophalen_vanaf__c)), 10, 29)
            ),
            1,
            0
        ))
        &amp; &quot;:&quot; &amp;
        LPAD(TEXT( MINUTE(TIMEVALUE( Ophalen_tot__c ))), 2, &apos;0&apos;)
        &amp; &quot; uur&quot; &amp; 
        Ophalen_tijd__c ,
    
        IF(
            OR(
                ISPICKVAL(Werk_Order_Status__c, &quot;Terugbrengen ingepland&quot;),
                ISPICKVAL(Werk_Order_Status__c, &quot;Reparatie brengen ingepland&quot;),
                ISPICKVAL(Werk_Order_Status__c, &quot;Wordt opgehaald&quot;),
ISPICKVAL(Werk_Order_Status__c, &quot;Levering ingepland&quot;)
            ),
            TEXT( HOUR( TIMEVALUE(Afleveren_vanaf__c )) + 1 + IF(
                AND(
                    DATEVALUE(Afleveren_vanaf__c) &gt;= DATE(YEAR(DATEVALUE(Afleveren_vanaf__c)), 3, 26),
                    DATEVALUE(Afleveren_vanaf__c) &lt; DATE(YEAR(DATEVALUE(Afleveren_vanaf__c)), 10, 29)
                ),
                1,
                0
            ))
            &amp; &quot;:&quot; &amp;
            LPAD(TEXT( MINUTE(TIMEVALUE( Afleveren_vanaf__c ))), 2, &apos;0&apos;)
            &amp; &quot; uur en &quot; &amp;
            TEXT( HOUR( TIMEVALUE(Afleveren_tot__c )) + 1 + IF(
                AND(
                    DATEVALUE(Afleveren_vanaf__c) &gt;= DATE(YEAR(DATEVALUE(Afleveren_vanaf__c)), 3, 26),
                    DATEVALUE(Afleveren_vanaf__c) &lt; DATE(YEAR(DATEVALUE(Afleveren_vanaf__c)), 10, 29)
                ),
                1,
                0
            ))
            &amp; &quot;:&quot; &amp;
            LPAD(TEXT( MINUTE(TIMEVALUE( Afleveren_tot__c ))), 2, &apos;0&apos;)
            &amp; &quot; uur&quot; &amp;
            Afleveren_tijd__c ,
        
            &quot;&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ophaaltijd</label>
    <type>Text</type>
</CustomField>