force-app/main/default/objects/Werk_Order__c/fields/Ophaalvoorstel_formula__c.field-meta.xml
<CustomField>
    <fullName>Ophaalvoorstel_formula__c</fullName>
    <formula>CASE(MOD(DATEVALUE(Ophalen_vanaf_voorstel__c) - DATE(1900, 1, 7), 7),
    0, &quot;zondag&quot;,
    1, &quot;maandag&quot;,
    2, &quot;dinsdag&quot;,
    3, &quot;woensdag&quot;,
    4, &quot;donderdag&quot;,
    5, &quot;vrijdag&quot;,
    6, &quot;zaterdag&quot;,
    &quot;&quot;
) &amp; &quot; &quot; &amp;
TEXT(DAY(DATEVALUE(Ophalen_vanaf_voorstel__c))) &amp; &quot; &quot; &amp;
CASE(MONTH(DATEVALUE(Ophalen_vanaf_voorstel__c)),
    1, &quot;januari&quot;,
    2, &quot;februari&quot;,
    3, &quot;maart&quot;,
    4, &quot;april&quot;,
    5, &quot;mei&quot;,
    6, &quot;juni&quot;,
    7, &quot;juli&quot;,
    8, &quot;augustus&quot;,
    9, &quot;september&quot;,
    10, &quot;oktober&quot;,
    11, &quot;november&quot;,
    12, &quot;december&quot;,
    &quot;&quot;
) &amp; &quot; &quot; &amp; TEXT(YEAR(DATEVALUE(Ophalen_vanaf_voorstel__c))) &amp;
&quot; tussen &quot; &amp;
TEXT(VALUE(LEFT(MID(TEXT(Ophalen_vanaf_voorstel__c), 12, 2), 2)) + 1) &amp; &quot;:&quot; &amp;
MID(TEXT(Ophalen_vanaf_voorstel__c), 15, 2) &amp; &quot; uur en &quot; &amp;
TEXT(VALUE(LEFT(MID(TEXT(Ophalen_tot_voorstel__c), 12, 2), 2)) + 1) &amp; &quot;:&quot; &amp;
MID(TEXT(Ophalen_tot_voorstel__c), 15, 2) &amp; &quot; uur.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ophaalvoorstel formula</label>
    <type>Text</type>
</CustomField>