force-app/main/default/objects/Werk_Order__c/fields/Ophalen_tijd__c.field-meta.xml
<CustomField>
    <fullName>Ophalen_tijd__c</fullName>
    <label>Ophalen tijd</label>
    <length>100</length>
    <type>Text</type>
</CustomField>