force-app/main/default/objects/Werk_Order__c/fields/Ophalen_tot__c.field-meta.xml
<CustomField>
    <fullName>Ophalen_tot__c</fullName>
    <label>Ophalen tot</label>
    <type>DateTime</type>
</CustomField>