force-app/main/default/objects/Werk_Order__c/fields/Ophalen_tot_voorstel__c.field-meta.xml
<CustomField>
    <fullName>Ophalen_tot_voorstel__c</fullName>
    <label>Ophalen tot voorstel</label>
    <type>DateTime</type>
</CustomField>