force-app/main/default/objects/Werk_Order__c/fields/Ophalen_vanaf__c.field-meta.xml
<CustomField>
    <fullName>Ophalen_vanaf__c</fullName>
    <label>Ophalen vanaf</label>
    <type>DateTime</type>
</CustomField>