force-app/main/default/objects/Werk_Order__c/fields/Ophalen_vanaf_datum1__c.field-meta.xml
<CustomField>
    <fullName>Ophalen_vanaf_datum1__c</fullName>
    <inlineHelpText>Indien het vanaf een bepaalde datum opgehaald moet worden, voer hier de datum in.</inlineHelpText>
    <label>Ophalen vanaf datum</label>
    <type>Date</type>
</CustomField>