force-app/main/default/objects/Werk_Order__c/fields/Ophalen_Vanaf_Datum__c.field-meta.xml
<CustomField>
    <fullName>Ophalen_Vanaf_Datum__c</fullName>
    <formula>DATEVALUE(Ophalen_vanaf__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ophalen Vanaf (Datum)</label>
    <type>Date</type>
</CustomField>