force-app/main/default/objects/Werk_Order__c/fields/Ophalen_vanaf_voorstel__c.field-meta.xml
<CustomField>
    <fullName>Ophalen_vanaf_voorstel__c</fullName>
    <label>Ophalen vanaf voorstel</label>
    <type>DateTime</type>
</CustomField>