force-app/main/default/objects/Werk_Order__c/fields/Ophalen_voorstel_van_tot_tekst__c.field-meta.xml
<CustomField>
    <fullName>Ophalen_voorstel_van_tot_tekst__c</fullName>
    <formula>CASE(
MOD(DATEVALUE( Ophalen_vanaf_voorstel__c) - DATE(1900, 1, 7), 7),
0, &quot;zondag&quot;,
1, &quot;maandag&quot;,
2, &quot;dinsdag&quot;,
3, &quot;woensdag&quot;,
4, &quot;donderdag&quot;,
5, &quot;vrijdag&quot;,
6, &quot;zaterdag&quot;,
&quot;Error&quot;
)
&amp; &quot; &quot; &amp;
TEXT( DAY(DATEVALUE( Ophalen_vanaf_voorstel__c )))
&amp; &quot; &quot; &amp;
CASE(
MONTH(DATEVALUE( Ophalen_vanaf_voorstel__c )),
1, &quot;januari&quot;,
2, &quot;februari&quot;,
3, &quot;maart&quot;,
4, &quot;april&quot;,
5, &quot;mei&quot;,
6, &quot;juni&quot;,
7, &quot;juli&quot;,
8, &quot;augustus&quot;,
9, &quot;september&quot;,
10, &quot;oktober&quot;,
11, &quot;november&quot;,
12, &quot;december&quot;,
&quot;Error&quot;
)
&amp; &quot; tussen &quot; &amp;
TEXT( HOUR( TIMEVALUE(Ophalen_vanaf_voorstel__c )) + 1 + IF(
  AND(
    DATEVALUE(Ophalen_vanaf_voorstel__c) &gt;= DATE(YEAR(DATEVALUE(Ophalen_vanaf_voorstel__c)), 3, 26),
    DATEVALUE(Ophalen_vanaf_voorstel__c) &lt; DATE(YEAR(DATEVALUE(Ophalen_vanaf_voorstel__c)), 10, 29)
  ),
  1,
  0
))
&amp; &quot;:&quot; &amp;
LPAD(TEXT( MINUTE(TIMEVALUE( Ophalen_vanaf_voorstel__c ))), 2, &apos;0&apos;)
&amp; &quot; uur en &quot; &amp;
TEXT( HOUR( TIMEVALUE(Ophalen_tot_voorstel__c )) + 1 + IF(
  AND(
    DATEVALUE(Ophalen_vanaf_voorstel__c) &gt;= DATE(YEAR(DATEVALUE(Ophalen_vanaf_voorstel__c)), 3, 26),
    DATEVALUE(Ophalen_vanaf_voorstel__c) &lt; DATE(YEAR(DATEVALUE(Ophalen_vanaf_voorstel__c)), 10, 29)
  ),
  1,
  0
))
&amp; &quot;:&quot; &amp;
LPAD(TEXT( MINUTE(TIMEVALUE( Ophalen_tot_voorstel__c ))), 2, &apos;0&apos;)
&amp; &quot; uur&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ophalen voorstel van/tot tekst</label>
    <type>Text</type>
</CustomField>