force-app/main/default/objects/Werk_Order__c/fields/Opmerkingen_255__c.field-meta.xml
<CustomField>
    <fullName>Opmerkingen_255__c</fullName>
    <label>Opmerkingen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>