force-app/main/default/objects/Werk_Order__c/fields/Opmerkingen__c.field-meta.xml
<CustomField>
    <fullName>Opmerkingen__c</fullName>
    <description>Komt op de werkbon en word niet gebruikt in emails naar klanten.</description>
    <inlineHelpText>Komt op de werkbon en word NIET gebruikt in emails naar klanten.</inlineHelpText>
    <label>Opmerkingen voor Uitvoerder</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>