force-app/main/default/objects/Werk_Order__c/fields/Opmerkingen_Aflevering__c.field-meta.xml
<CustomField>
    <fullName>Opmerkingen_Aflevering__c</fullName>
    <label>Opmerkingen Aflevering</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>