force-app/main/default/objects/Werk_Order__c/fields/Opmerkingen_bevestiging__c.field-meta.xml
<CustomField>
    <fullName>Opmerkingen_bevestiging__c</fullName>
    <inlineHelpText>Komt in de bevestiging te staan die naar de klant wordt verstuurd.</inlineHelpText>
    <label>Opmerkingen bevestiging</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>