force-app/main/default/objects/Werk_Order__c/fields/Opmerkingen_Chauffeur__c.field-meta.xml
<CustomField>
    <fullName>Opmerkingen_Chauffeur__c</fullName>
    <label>Opmerkingen Chauffeur</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opmerkingen_Chauffeur</valueSetName>
    </valueSet>
</CustomField>