force-app/main/default/objects/Werk_Order__c/fields/Opmerkingen_Facturering__c.field-meta.xml
<CustomField>
    <fullName>Opmerkingen_Facturering__c</fullName>
    <label>Opmerkingen Facturering</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>