force-app/main/default/objects/Werk_Order__c/fields/Opmerkingen_op_factuur__c.field-meta.xml
<CustomField>
    <fullName>Opmerkingen_op_factuur__c</fullName>
    <label>Opmerkingen op factuur</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>