force-app/main/default/objects/Werk_Order__c/fields/Opmerkingen_Ophalen__c.field-meta.xml
<CustomField>
    <fullName>Opmerkingen_Ophalen__c</fullName>
    <label>Opmerkingen Ophalen</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>