force-app/main/default/objects/Werk_Order__c/fields/Opmerkingen_overig_chauffeur__c.field-meta.xml
<CustomField>
    <fullName>Opmerkingen_overig_chauffeur__c</fullName>
    <label>Opmerkingen overig chauffeur</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>