force-app/main/default/objects/Werk_Order__c/fields/Opmerkingen_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Opmerkingen_Specialist__c</fullName>
    <label>Opmerkingen Specialist</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>