force-app/main/default/objects/Werk_Order__c/fields/Opmerkingen_voor_Planning__c.field-meta.xml
<CustomField>
    <fullName>Opmerkingen_voor_Planning__c</fullName>
    <label>Opmerkingen voor Planning</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>