force-app/main/default/objects/Werk_Order__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Werk Orders (Partner)</relationshipLabel>
    <relationshipName>PartnerOpdrachten</relationshipName>
    <type>Lookup</type>
</CustomField>