force-app/main/default/objects/Werk_Order__c/fields/Payment_Link_Generation_Error__c.field-meta.xml
<CustomField>
    <fullName>Payment_Link_Generation_Error__c</fullName>
    <label>Payment Link Generation Error</label>
    <type>TextArea</type>
</CustomField>