force-app/main/default/objects/Werk_Order__c/fields/Pin_ontvangen_datum_tijd__c.field-meta.xml
<CustomField>
    <fullName>Pin_ontvangen_datum_tijd__c</fullName>
    <label>Pin ontvangen datum/tijd</label>
    <type>DateTime</type>
</CustomField>