force-app/main/default/objects/Werk_Order__c/fields/Prijs_inpakken_plastic__c.field-meta.xml
<CustomField>
    <fullName>Prijs_inpakken_plastic__c</fullName>
    <formula>Totaal_m2_vloerkleed__c * 1.5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prijs inpakken plastic</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>