force-app/main/default/objects/Werk_Order__c/fields/Prijs_Ondertapijt__c.field-meta.xml
<CustomField>
    <fullName>Prijs_Ondertapijt__c</fullName>
    <formula>Totaal_m2_vloerkleed__c * 13.50</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prijs Ondertapijt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>