force-app/main/default/objects/Werk_Order__c/fields/Priority_Date__c.field-meta.xml
<CustomField>
    <fullName>Priority_Date__c</fullName>
    <label>Priority Date</label>
    <type>Date</type>
</CustomField>