force-app/main/default/objects/Werk_Order__c/fields/Projectadres1__c.field-meta.xml
<CustomField>
    <fullName>Projectadres1__c</fullName>
    <label>Projectadres</label>
    <type>Address</type>
</CustomField>