force-app/main/default/objects/Werk_Order__c/fields/Projectadres__c.field-meta.xml
<CustomField>
    <fullName>Projectadres__c</fullName>
    <description>Waar moet het uitgevoerd worden?</description>
    <label>Projectadres</label>
    <type>TextArea</type>
</CustomField>