force-app/main/default/objects/Werk_Order__c/fields/Projectadres_Geocode_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Projectadres_Geocode_Date_Time__c</fullName>
    <label>Projectadres Geocode Date Time</label>
    <type>DateTime</type>
</CustomField>