force-app/main/default/objects/Werk_Order__c/fields/Projectadres_Geocode_Quality__c.field-meta.xml
<CustomField>
    <fullName>Projectadres_Geocode_Quality__c</fullName>
    <label>Projectadres Geocode Quality</label>
    <length>50</length>
    <type>Text</type>
</CustomField>