force-app/main/default/objects/Werk_Order__c/fields/Projectadres_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Projectadres_Geolocation__c</fullName>
    <label>Projectadres Geolocation</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>