force-app/main/default/objects/Werk_Order__c/fields/Recordlink__c.field-meta.xml
<CustomField>
    <fullName>Recordlink__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id, Name, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recordlink</label>
    <type>Text</type>
</CustomField>