force-app/main/default/objects/Werk_Order__c/fields/Reden_Annulering__c.field-meta.xml
<CustomField>
    <fullName>Reden_Annulering__c</fullName>
    <label>Reden Annulering</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kan niet gereinigd worden (leer / plantaardig)</fullName>
            </value>
            <value>
                <fullName>Proefreiniging niet akkoord</fullName>
            </value>
            <value>
                <fullName>Duurt te lang voor inplannen</fullName>
            </value>
            <value>
                <fullName>Anders</fullName>
            </value>
            <value>
                <fullName>Kan niet gereinigd worden</fullName>
            </value>
            <value>
                <fullName>Teveel garanties</fullName>
            </value>
            <value>
                <fullName>Duurt te lang</fullName>
            </value>
            <value>
                <fullName>Geen reactie bij inplannen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>