force-app/main/default/objects/Werk_Order__c/fields/Reden_annulering_anders__c.field-meta.xml
<CustomField>
    <fullName>Reden_annulering_anders__c</fullName>
    <label>Reden annulering anders</label>
    <length>255</length>
    <type>Text</type>
</CustomField>