force-app/main/default/objects/Werk_Order__c/fields/Reden_Klacht__c.field-meta.xml
<CustomField>
    <fullName>Reden_Klacht__c</fullName>
    <label>Oorzaak klacht</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Los vuil</fullName>
            </value>
            <value>
                <fullName>Vlekken</fullName>
            </value>
            <value>
                <fullName>Looppad</fullName>
            </value>
            <value>
                <fullName>Geur</fullName>
            </value>
            <value>
                <fullName>Pluis</fullName>
            </value>
            <value>
                <fullName>Geparfurmeerde geur</fullName>
            </value>
            <value>
                <fullName>Algemeen vuil</fullName>
            </value>
            <value>
                <fullName>Cinco schade veroorzaakt</fullName>
            </value>
            <value>
                <fullName>Kleuruitloop</fullName>
            </value>
            <value>
                <fullName>Franje</fullName>
            </value>
            <value>
                <fullName>Anders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>