force-app/main/default/objects/Werk_Order__c/fields/Reinigen__c.field-meta.xml
<CustomField>
    <fullName>Reinigen__c</fullName>
    <label>Reinigen</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>vast tapijt</fullName>
            </value>
            <value>
                <fullName>meubels</fullName>
            </value>
            <value>
                <fullName>matras</fullName>
            </value>
            <value>
                <fullName>overig</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>