force-app/main/default/objects/Werk_Order__c/fields/Route_Keuze__c.field-meta.xml
<CustomField>
    <fullName>Route_Keuze__c</fullName>
    <label>Route Keuze</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>