force-app/main/default/objects/Werk_Order__c/fields/Route_ophalen_voorstel__c.field-meta.xml
<CustomField>
    <fullName>Route_ophalen_voorstel__c</fullName>
    <label>Route ophalen voorstel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>