force-app/main/default/objects/Werk_Order__c/fields/Route_Optie_1__c.field-meta.xml
<CustomField>
    <fullName>Route_Optie_1__c</fullName>
    <label>Route Optie 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>