force-app/main/default/objects/Werk_Order__c/fields/Route_Referentie_1__c.field-meta.xml
<CustomField>
    <fullName>Route_Referentie_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route Referentie 1</label>
    <referenceTo>Routes__c</referenceTo>
    <relationshipLabel>Werk Orders (Route Referentie 1)</relationshipLabel>
    <relationshipName>Werk_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>