force-app/main/default/objects/Werk_Order__c/fields/Route_Referentie_2__c.field-meta.xml
<CustomField>
    <fullName>Route_Referentie_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route Referentie 2</label>
    <referenceTo>Routes__c</referenceTo>
    <relationshipLabel>Werk Orders</relationshipLabel>
    <relationshipName>Werk_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>