force-app/main/default/objects/Werk_Order__c/fields/Route_Referentie_3__c.field-meta.xml
<CustomField>
    <fullName>Route_Referentie_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route Referentie 3</label>
    <referenceTo>Routes__c</referenceTo>
    <relationshipLabel>Werk Orders (Route Referentie 3)</relationshipLabel>
    <relationshipName>Werk_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>