force-app/main/default/objects/Werk_Order__c/fields/Specialist_SR__c.field-meta.xml
<CustomField>
    <fullName>Specialist_SR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Specialist SR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Werk_Orders4</relationshipName>
    <type>Lookup</type>
</CustomField>