force-app/main/default/objects/Werk_Order__c/fields/Spoed__c.field-meta.xml
<CustomField>
    <fullName>Spoed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spoed?</label>
    <type>Checkbox</type>
</CustomField>