force-app/main/default/objects/Werk_Order__c/fields/SR_Samenvatting_Werkzaamheden_Tekst__c.field-meta.xml
<CustomField>
    <fullName>SR_Samenvatting_Werkzaamheden_Tekst__c</fullName>
    <formula>IF( Meubel_Totaal_Zitplaatsen__c  &gt; 0, 
   &quot;Meubel - &quot;+TEXT(Meubel_Totaal_Zitplaatsen__c)&amp;&quot; zitplaatsen&quot;&amp;BR(), 
   &quot;&quot;
) &amp;
IF(Vast_Tapijt_Totaal_m__c &gt; 0, 
   &quot;Vast tapijt - &quot;+TEXT(Vast_Tapijt_Totaal_m__c)&amp;&quot; m²&quot;&amp;BR(), 
   &quot;&quot;
) &amp;
IF(Matras_Totaal_ligplekken__c &gt; 0, 
   &quot;Matras - &quot;+TEXT(Matras_Totaal_ligplekken__c)&amp;&quot; ligplekken&quot;, 
   &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SR Samenvatting Werkzaamheden Tekst</label>
    <type>Text</type>
</CustomField>