force-app/main/default/objects/Werk_Order__c/fields/Subtotaal_Wasserij_Items__c.field-meta.xml
<CustomField>
    <fullName>Subtotaal_Wasserij_Items__c</fullName>
    <label>Totaal Excl. BTW Wasserij Items</label>
    <summarizedField>Wasserij_item__c.Totale_Prijs__c</summarizedField>
    <summaryForeignKey>Wasserij_item__c.Werk_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>