force-app/main/default/objects/Werk_Order__c/fields/Telefoon__c.field-meta.xml
<CustomField>
    <fullName>Telefoon__c</fullName>
    <formula>Account__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telefoon</label>
    <type>Text</type>
</CustomField>