force-app/main/default/objects/Werk_Order__c/fields/Tot__c.field-meta.xml
<CustomField>
    <fullName>Tot__c</fullName>
    <formula>CASE( Werk_Order_Status__c ,&quot;Ophalen Ingepland&quot;,  Ophalen_tot__c  ,&quot;Terugbrengen ingepland&quot;,   Afleveren_tot__c  ,&quot;Ingepland&quot;,  Aanvang_Tot__c  ,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tot</label>
    <type>DateTime</type>
</CustomField>