force-app/main/default/objects/Werk_Order__c/fields/Totaal_BTW_Wasserij_Items__c.field-meta.xml
<CustomField>
    <fullName>Totaal_BTW_Wasserij_Items__c</fullName>
    <label>Totaal BTW Wasserij Items</label>
    <summarizedField>Wasserij_item__c.BTW_Bedrag__c</summarizedField>
    <summaryForeignKey>Wasserij_item__c.Werk_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>