force-app/main/default/objects/Werk_Order__c/fields/Totaal_Gefactureerd_Betaald__c.field-meta.xml
<CustomField>
    <fullName>Totaal_Gefactureerd_Betaald__c</fullName>
    <label>Totaal Gefactureerd/Betaald</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>