force-app/main/default/objects/Werk_Order__c/fields/Totaal_Incl_BTW_Wasserij_Items__c.field-meta.xml
<CustomField>
    <fullName>Totaal_Incl_BTW_Wasserij_Items__c</fullName>
    <formula>Totaal_BTW_Wasserij_Items__c +  Subtotaal_Wasserij_Items__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totaal Incl BTW Wasserij Items</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>