force-app/main/default/objects/Werk_Order__c/fields/Totaal_Korting_WI_S__c.field-meta.xml
<CustomField>
    <fullName>Totaal_Korting_WI_S__c</fullName>
    <label>Totaal Korting WI&apos;s</label>
    <summarizedField>Wasserij_item__c.Totaal_korting__c</summarizedField>
    <summaryForeignKey>Wasserij_item__c.Werk_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>