force-app/main/default/objects/Werk_Order__c/fields/Totaal_m2_vloerkleed__c.field-meta.xml
<CustomField>
    <fullName>Totaal_m2_vloerkleed__c</fullName>
    <label>Totaal m2 vloerkleed</label>
    <summarizedField>Wasserij_item__c.Oppervlakte_m__c</summarizedField>
    <summaryFilterItems>
        <field>Wasserij_item__c.Oppervlakte_m__c</field>
        <operation>greaterThan</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>Wasserij_item__c.Werk_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>