force-app/main/default/objects/Werk_Order__c/fields/Totaal_m_ondertapijt__c.field-meta.xml
<CustomField>
    <fullName>Totaal_m_ondertapijt__c</fullName>
    <label>Totaal m² ondertapijt</label>
    <summarizedField>Wasserij_item__c.Aantal_m__c</summarizedField>
    <summaryFilterItems>
        <field>Wasserij_item__c.Item__c</field>
        <operation>equals</operation>
        <value>Ondertapijt</value>
    </summaryFilterItems>
    <summaryForeignKey>Wasserij_item__c.Werk_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>