force-app/main/default/objects/Werk_Order__c/fields/Totaal_Orderproducten__c.field-meta.xml
<CustomField>
    <fullName>Totaal_Orderproducten__c</fullName>
    <label>Totaal Orderproducten</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>