force-app/main/default/objects/Werk_Order__c/fields/Totaal_Transacties__c.field-meta.xml
<CustomField>
    <fullName>Totaal_Transacties__c</fullName>
    <label>Totaal Transacties</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>