force-app/main/default/objects/Werk_Order__c/fields/Totaal_wasserij_items__c.field-meta.xml
<CustomField>
    <fullName>Totaal_wasserij_items__c</fullName>
    <label>Totaal wasserij items</label>
    <summaryForeignKey>Wasserij_item__c.Werk_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>