force-app/main/default/objects/Werk_Order__c/fields/Totaal_WI_s_zonder_korting__c.field-meta.xml
<CustomField>
    <fullName>Totaal_WI_s_zonder_korting__c</fullName>
    <label>Totaal WI&apos;s zonder korting</label>
    <summarizedField>Wasserij_item__c.Totaal__c</summarizedField>
    <summaryForeignKey>Wasserij_item__c.Werk_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>