force-app/main/default/objects/Werk_Order__c/fields/Upsale_Ondertapijt_Link__c.field-meta.xml
<CustomField>
    <fullName>Upsale_Ondertapijt_Link__c</fullName>
    <formula>&quot;https://cinco.nl/client/aanbieding-ondertapijt-klanten/&quot;
&amp; &quot;?referentienummer=&quot; &amp; Name
&amp; &quot;&amp;afmetingvloerkleed=&quot; &amp; TEXT(Totaal_m2_vloerkleed__c)
&amp; &quot;&amp;prijsondertapijt=&quot; &amp; TEXT(Prijs_Ondertapijt__c)
&amp; &quot;&amp;contact=&quot; &amp;
  SUBSTITUTE(
    SUBSTITUTE(
      Contactpersoon__r.FirstName &amp; &quot;%20&quot; &amp; Contactpersoon__r.LastName,
      &quot; &quot;,
      &quot;%20&quot;
    ),
    &quot;é&quot;,
    &quot;%C3%A9&quot;
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Upsale Ondertapijt Link</label>
    <type>Text</type>
</CustomField>