force-app/main/default/objects/Werk_Order__c/fields/Upsale_Ondertapijt_URL__c.field-meta.xml
<CustomField>
    <fullName>Upsale_Ondertapijt_URL__c</fullName>
    <label>Upsale Ondertapijt URL</label>
    <type>Url</type>
</CustomField>